# minimal_example_deltalake_datafusion

./: Cargo.toml  README.md  minimal.csv
src/: main.rs
